--- a/src/admin.html
+++ b/src/admin.html
@@ -50,15 +50,15 @@
         <label class="checkbox"><input type="checkbox" value="grad" onchange="filter()"/>Graduate</label>
         <label class="checkbox"><input type="checkbox" value="undergrad" onchange="filter()"/>Undergraduate </label>
     </div>
-	<!--<div class="checkbox">
+	<div class="checkbox">
         <label class="checkbox"><input type="checkbox" value="applicants" onchange="filter()" checked/>Applicants</label>
         <label class="checkbox"><input type="checkbox" value="noapplicants" onchange="filter()"/>No Applicants </label>
-    </div>-->
+    </div>
 </div>
 
     <div class="open-position-container" id="open-position-container">
         <div class="card mb-3 target" id="card">
-            <h5 class="card-header"><span id="classname">IT 390</span>(<span id="semester">Summer</span>)<!--<span class="float-end" id="applicants">0 Applicants</span>--></h5>
+            <h5 class="card-header"><span id="classname">IT 390</span>(<span id="semester">Summer</span>)<span class="float-end" id="applicants">0 Applicants</span></h5>
             <div class="card-body">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span>
 				
