--- a/src/applicants.html
+++ b/src/applicants.html
@@ -49,7 +49,7 @@
         <input type="checkbox" name="maj" value="CS">CS
         <input type="checkbox" name="maj" value="IT">IT
         <input type="checkbox" name="maj" value="ECE">ECE
-		<input type="checkbox" name="maj" value="EE">EE
+		<!--<input type="checkbox" name="maj" value="EE">EE-->
 	</div>
 	<div id="level">
 		<input type="checkbox" name="lev" value="BS">BS
