--- a/src/studentform.html
+++ b/src/studentform.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style/css.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="script/bootstrap.bundle.min.js"></script>
   <script src="script/data.js"></script>
   <script src="script/studentform/formiteration.js"></script>
   <script src="script/studentform/formwrite.js"></script>
@@ -179,9 +180,20 @@
 					</div>
 					      
 					<p id="uploadtext">You may attach your updated resume and transcript</p>
-					<div class="input-group mb-3 col">
-						<input class="form-control" type="file" id="myFile" name="filename" multiple>
-						<label class="input-group-text" for="myFile">Upload</label>
+
+					<div class="input-group mb-3 col">						
+						<label class="input-group-text resumefile" for="rf">Resume Upload</label><input class="form-control resumefile" type="file" id="rf">
+						<label hidden class="input-group-text transcriptfile" for="tf">Transcript Upload</label><input hidden class="form-control transcriptfile" type="file" id="tf">
+						<label hidden class="input-group-text gtafile" for="gf">GTA Upload</label><input hidden class="form-control gtafile" type="file" id="gf">
+						<div class="input-group-prepend">
+							<button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							</button>
+							<div class="dropdown-menu">
+								<button onclick="changeUpload(this.value)" value="resumef" class="dropdown-item">Resume</button>
+								<button onclick="changeUpload(this.value)" value="transcriptf" class="dropdown-item filedropdown">Transcript</button>
+								<button onclick="changeUpload(this.value)" value="gtaf" class="dropdown-item filedropdown">GTA certification</button>
+							</div>
+						</div>
 						<div class="invalid-feedback">
                           You must upload proof of GTA certification or a waiver.
                         </div>
