--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
                             <span class="input-group-text"><i class="bi bi-envelope"></i></span>
                             <input type="text" class="form-control" id="email" placeholder="UMKC Email" required>
                             <div class="invalid-feedback">
-                                Please enter your UMKC email.
+                                Please enter your UMKC email or username.
                             </div>
                         </div>
 
