--- a/src/studentform.html
+++ b/src/studentform.html
@@ -111,13 +111,13 @@
                         <label class="form-label" for="level">Current Level:</label>
                         <div>
                           <input class="form-check-input level" type="radio" required id="BS" name="level" value="0">
-                          <label class="form-check-label" for="BS" id="BSlabel">BS</label>
+                          <label class="form-check-label me-4" for="BS" id="BSlabel">BS</label>
                         
                           <input class="form-check-input level" type="radio" required id="MS" name="level" value="1">
-                          <label class="form-check-label" for="MS">MS</label>
+                          <label class="form-check-label me-4" for="MS">MS</label>
 
                           <input class="form-check-input level" type="radio" required id="PhD" name="level" value="2">
-                          <label class="form-check-label" for="PhD">PhD</label>
+                          <label class="form-check-label me-4" for="PhD">PhD</label>
                           <div class="invalid-feedback">
                             Please select your current level.
                           </div>
@@ -144,10 +144,10 @@
                         <label class="form-label" for="GTA">Are you GTA Certified?</label>
                         <div>
                           <input class="form-check-input gtainput" type="radio" required id="yes" name="GTA" value="yes" onclick="updateGTA(this.value)">
-                          <label class="form-check-label" for="yes" id="BSlabel">Yes</label>
+                          <label class="form-check-label me-4" for="yes" id="BSlabel">Yes</label>
                         
                           <input class="form-check-input gtainput" type="radio" required id="no" name="GTA" value="no" onclick="updateGTA(this.value)">
-                          <label class="form-check-label" for="no">No</label>
+                          <label class="form-check-label me-4" for="no">No</label>
 
                           <input type="radio" required id="null" name="GTA" hidden>
 						  <input type="radio" required id="onrecord" name="GTA" hidden>
