edits and filter design for admin

--- a/src/studentform.html
+++ b/src/studentform.html
@@ -186,7 +186,7 @@
                           You must upload proof of GTA certification or a waiver.
                         </div>
 					</div>
-                    <input type="submit" value="Submit" class="btn btn-primary">
+                    <input type="submit" value="Submit" class="btn btn-primary mt-3">
                 </form>
                    <!-- Message Form was submitted successfully-->
                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
