--- a/src/admin.html
+++ b/src/admin.html
@@ -21,7 +21,7 @@
     </div>
 
     <div>
-        <h2 class="m-5 mt-2">Open Positions:
+        <h2 class="m-5 mt-2 mb-3">Open Positions:
             <div class="input-group float-end">
                 <input type="text" id="Search" onkeyup="Search()" class="form-control rounded" placeholder="Search Class" aria-label="Search Position" aria-describedby="search-addon" />
                 <span  class="btn btn-primary" id="advanced-search-button" type="button">
@@ -30,54 +30,60 @@
             </div>
         </h2>
     </div>
-<div class="filter">
-    <div class="checkbox">
-        <label class="checkbox"><input type="checkbox" value="CS" onchange="filter()"/>CS</label>
-        <label class="checkbox"><input type="checkbox" value="IT" onchange="filter()"/>IT</label>
-        <label class="checkbox"><input type="checkbox" value="ECE" onchange="filter()"/>ECE</label>
-        <label class="checkbox"><input type="checkbox" value="EE" onchange="filter()"/>EE</label>
+    <div class="text-center mb-3">
+        <a id="newbutton" href="createposition.html?new" value="" class="open-position-btn btn btn-primary">Add Position</a>
+        <!--<a href="createposition.html" class="mt-5 btn btn-primary ">Add Position</a>-->
     </div>
-	<div class="checkbox">
-        <label class="checkbox"><input type="checkbox" value="Grader" onchange="filter()"/>Grader</label>
-        <label class="checkbox"><input type="checkbox" value="Instructor" onchange="filter()"/>Instructor</label>
-    </div>
-	<div class="checkbox">
-        <label class="checkbox"><input type="checkbox" value="Fall" onchange="filter()"/>Fall</label>
-        <label class="checkbox"><input type="checkbox" value="Spring" onchange="filter()"/>Spring</label>
-        <label class="checkbox"><input type="checkbox" value="Summer" onchange="filter()"/>Summer</label>
-    </div>
-	<div class="checkbox">
-        <label class="checkbox"><input type="checkbox" value="grad" onchange="filter()"/>Graduate</label>
-        <label class="checkbox"><input type="checkbox" value="undergrad" onchange="filter()"/>Undergraduate </label>
-    </div>
-	<div class="checkbox">
-        <label class="checkbox"><input type="checkbox" value="applicants" onchange="filter()" checked/>Applicants</label>
-        <label class="checkbox"><input type="checkbox" value="noapplicants" onchange="filter()"/>No Applicants </label>
-    </div>
-</div>
 
+    <div class=" mb-3 p-3 card filter card-filter">
+        <h5>Filter by <i class="bi bi-funnel"></i></h5>
+        <label>Major:</label>
+            <div class="checkbox form-check">
+                <label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="CS" onchange="filter()"/>CS</label><br>
+                <label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="IT" onchange="filter()"/>IT</label><br>
+                <label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="ECE" onchange="filter()"/>ECE</label><br>
+                <label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="EE" onchange="filter()"/>EE</label><br>
+            </div>
+            <label class="mt-2">Position:</label>
+            <div class="checkbox form-check">
+                <label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="Grader" onchange="filter()"/>Grader</label><br>
+                <label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="Instructor" onchange="filter()"/>Instructor</label><br>
+            </div>
+
+            <label class="mt-2">Semester:</label>
+            <div class="checkbox form-check">
+                <label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="Fall" onchange="filter()"/>Fall</label><br>
+                <label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="Spring" onchange="filter()"/>Spring</label><br>
+                <label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="Summer" onchange="filter()"/>Summer</label><br>
+            </div>
+            <label class="mt-2">Level:</label>
+            <div class="checkbox form-check">
+                <label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="grad" onchange="filter()"/>Graduate</label><br>
+                <label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="undergrad" onchange="filter()"/>Undergraduate </label><br>
+            </div>
+            <div class="mt-3 checkbox form-check">
+                <label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="applicants" onchange="filter()" checked/>Applicants</label><br>
+                <label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="noapplicants" onchange="filter()"/>No Applicants </label><br>
+            </div>
+    </div>
+   
     <div class="open-position-container" id="open-position-container">
         <div class="card mb-3 target" id="card">
-            <h5 class="card-header"><span id="classname">IT 390</span>(<span id="semester">Summer</span>)<span class="float-end" id="applicants">0 Applicants</span></h5>
+            <h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)<span class="float-end" id="applicants">0 Applicants</span></h5>
             <div class="card-body">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span>
-				
-				<a id="seebutton" href="" value="" class="open-position-btn btn btn-primary float-end">See Applicants</a><br>
-				<!--<a id="editbutton" href="" value="" class="open-position-btn btn btn-primary float-end">Edit Position</a><br>--> 
-				<div class = "open-position-input-group btn-primary input-group float-end">
-					 <a id="editbutton" href="" value=""class="input-group-btn btn btn-primary">Edit Notes</a>
-					<button id="closebutton" value="" class="input-group-btn btn btn-primary">Close Position</button>
-				</div>
-                <label class="card-title">Notes:</label><span id="notes">None</span>				
-				<!--<button id="closebutton" value="" class="open-position-btn btn btn-primary float-end">Close Position</button>-->
-                <br>
+                    
+                    <a id="seebutton" href="" value="" class="open-position-btn btn btn-primary float-end">See Applicants</a><br>
+                    <!--<a id="editbutton" href="" value="" class="open-position-btn btn btn-primary float-end">Edit Position</a><br>--> 
+                    <div class = "open-position-input-group btn-primary input-group float-end">
+                        <a id="editbutton" href="" value=""class="input-group-btn btn btn-primary">Edit Notes</a>
+                        <button id="closebutton" value="" class="input-group-btn btn btn-primary">Close Position</button>
+                    </div>
+                    <label class="card-title">Notes:</label><span id="notes">None</span>				
+                    <!--<button id="closebutton" value="" class="open-position-btn btn btn-primary float-end">Close Position</button>-->
+                    <br>
+                </div>
             </div>
-        </div>
-    </div>
-
-    <div class="text-center mt-3">
-		<a id="newbutton" href="createposition.html?new" value="" class="open-position-btn btn btn-primary">Add Position</a>
-        <!--<a href="createposition.html" class="mt-5 btn btn-primary ">Add Position</a>-->
     </div>
 
  <!--Script added for bootstrap-->
