edit checkbox design on create position

--- a/src/createposition.html
+++ b/src/createposition.html
@@ -79,9 +79,9 @@
                                         <div class="col mt-3">
                                             <label for="semester">Semester:</label>
 											<div class="checkbox-group required">
-												<input type="checkbox" class="semester-option" name="semester" id="0" onclick="semesterValidation()" required><label for="0">Fall</label>
-												 <input type="checkbox" class="semester-option" name="semester" id="1" onclick="semesterValidation()" required><label for="1">Spring</label>
-												 <input type="checkbox" class="semester-option" name="semester" id="2" onclick="semesterValidation()" required><label for="2">Summer</label>
+											   <input type="checkbox" class="semester-option form-check-input me-1" name="semester" id="0" onclick="semesterValidation()" required><label class="me-4" for="0">Fall</label>
+												 <input type="checkbox" class="semester-option form-check-input me-1" name="semester" id="1" onclick="semesterValidation()" required><label class="me-4" for="1">Spring</label>
+												 <input type="checkbox" class="semester-option form-check-input me-1" name="semester" id="2" onclick="semesterValidation()" required><label class="me-4" for="2">Summer</label>
 												 <div class="invalid-feedback">
 													Please choose a semester.
 												</div>
