--- a/src/studentform.html
+++ b/src/studentform.html
@@ -189,9 +189,9 @@
 							<button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							</button>
 							<div class="dropdown-menu">
-								<button onclick="changeUpload(this.value)" value="resumef" class="dropdown-item">Resume</button>
-								<button onclick="changeUpload(this.value)" value="transcriptf" class="dropdown-item filedropdown">Transcript</button>
-								<button onclick="changeUpload(this.value)" value="gtaf" class="dropdown-item filedropdown">GTA certification</button>
+								<button type="button" onclick="changeUpload(this.value)" value="resumef" class="dropdown-item">Resume</button>
+								<button type="button" onclick="changeUpload(this.value)" value="transcriptf" class="dropdown-item filedropdown">Transcript</button>
+								<button type="button" onclick="changeUpload(this.value)" value="gtaf" class="dropdown-item filedropdown">GTA certification</button>
 							</div>
 						</div>
 						<div class="invalid-feedback">
