fix minor css stuff

--- a/src/admin.html
+++ b/src/admin.html
@@ -23,7 +23,7 @@
     <div>
         <h2 class="m-5 mt-2 mb-3">Open Positions:
             <div class="input-group float-end">
-                <input type="text" id="Search" onkeyup="Search()" class="form-control rounded" placeholder="Search Class" aria-label="Search Position" aria-describedby="search-addon" />
+                <input type="text" id="Search" onkeyup="Search()" class="form-control" placeholder="Search Class" aria-label="Search Position" aria-describedby="search-addon" />
                 <span  class="btn btn-primary" id="advanced-search-button" type="button">
                     <i class="fa fa-search"></i>
                   </span>            
