--- a/src/createposition.html
+++ b/src/createposition.html
@@ -18,8 +18,8 @@
     <div class="page-logo">
         <img src="assets/umkc-logo1.png" class="img-login img-fluid" width="400px">
     </div>
-
-    <div class="position-container">
+	
+	<div class="position-container">
         <div class="row">
             <div class="col-lg-11-auto">
                 <div class="card my-5">
@@ -38,7 +38,7 @@
 											<option value="IT">IT</option>  
                                           </ul>   
                                     </select>
-									<input type="text" class="form-control" id="CourseNumber" onchange="coursenumberChange(this.value)" pattern="(([1-4][0-9]{2}|[5][0-9]{3})([ABD-HJLNP-UW-Zabd-hjlnp-uw-z]{1,2})?)" required>
+									<input type="text" class="form-control rounded-end" id="CourseNumber" onchange="coursenumberChange(this.value)" pattern="(([1-4][0-9]{2}|[5][0-9]{3})([ABD-HJLNP-UW-Zabd-hjlnp-uw-z]{1,2})?)" required>
 									<div class="invalid-feedback">
 									Please input a valid course number.
 									</div>
