--- a/src/studentform.html
+++ b/src/studentform.html
@@ -192,7 +192,7 @@
 						<label hidden class="input-group-text transcriptfile file-label" for="tf">Transcript Upload</label>
 						<label hidden class="input-group-text gtafile file-label" for="gf">GTA Upload</label>
 						<div class="input-group-prepend">
-							<button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split file-dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							</button>
 							<div class="dropdown-menu">
 								<button type="button" onclick="changeUpload(this.value)" value="resumef" class="dropdown-item">Resume</button>
