--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 
                         <div class="input-group mb-3 login-input">
                             <span class="input-group-text"><i class="bi bi-envelope"></i></span>
-                            <input type="text" class="form-control" id="email" placeholder="UMKC email or username" required>
+                            <input type="text" class="form-control rounded-end" id="email" placeholder="UMKC email or username" required>
                             <div class="invalid-feedback">
                                 Please enter your UMKC email or username.
                             </div>
