--- a/src/admin.html
+++ b/src/admin.html
@@ -7,8 +7,8 @@
   <!--Link added for bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style/css.css">
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-   <script src="script/admin/adminfilter.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="script/admin/adminfilter.js"></script>
   <script src="script/admin/adminwrite.js"></script>
   <script type="module" src="script/admin/admindatabase.js"></script>
   <link rel="icon" href="assets/umkc-logo.png">
@@ -35,14 +35,20 @@
         <!--<a href="createposition.html" class="mt-5 btn btn-primary ">Add Position</a>-->
     </div>
 
-    <div class=" mb-3 p-3 card filter card-filter">
+    <div class="mb-3 p-3 card filter card-filter sticky">
+		<!--<div class="input-group float-end"">
+			<input type="text" id="Search" onkeyup="Search()" class="form-control" placeholder="Search Class" aria-label="Search Position" aria-describedby="search-addon" />
+			<span  class="btn btn-primary" id="advanced-search-button" type="button">
+				<i class="fa fa-search"></i>
+			</span>            
+		</div><br>-->
         <h5>Filter by <i class="bi bi-funnel"></i></h5>
         <label>Major:</label>
             <div class="checkbox form-check">
                 <label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="CS" onchange="filter()"/>CS</label><br>
                 <label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="IT" onchange="filter()"/>IT</label><br>
                 <label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="ECE" onchange="filter()"/>ECE</label><br>
-                <label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="EE" onchange="filter()"/>EE</label><br>
+                <!--<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="EE" onchange="filter()"/>EE</label><br>-->
             </div>
             <label class="mt-2">Position:</label>
             <div class="checkbox form-check">
@@ -85,6 +91,91 @@
                 </div>
             </div>
     </div>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	
 
  <!--Script added for bootstrap-->
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
