--- a/src/admin.html
+++ b/src/admin.html
@@ -35,7 +35,7 @@
         <!--<a href="createposition.html" class="mt-5 btn btn-primary ">Add Position</a>-->
     </div>
 
-    <div class="mb-3 p-3 card filter card-filter sticky">
+    <div class="mb-3 p-3 card filter card-filter stickyleft">
 		<!--<div class="input-group float-end"">
 			<input type="text" id="Search" onkeyup="Search()" class="form-control" placeholder="Search Class" aria-label="Search Position" aria-describedby="search-addon" />
 			<span  class="btn btn-primary" id="advanced-search-button" type="button">
