added sticky-right and sticky-center

--- a/src/admin.html
+++ b/src/admin.html
@@ -30,18 +30,19 @@
             </div>
         </h2>
     </div>
-    <div class="text-center mb-3">
+    <div class="text-center mb-3 sticky-center">
         <a id="newbutton" href="createposition.html?new" value="" class="open-position-btn btn btn-primary">Add Position</a>
         <!--<a href="createposition.html" class="mt-5 btn btn-primary ">Add Position</a>-->
     </div>
-
-    <div class="mb-3 p-3 card filter card-filter stickyleft">
-		<!--<div class="input-group float-end"">
+    <!--<div class="sticky-right">
+		<div class="input-group">
 			<input type="text" id="Search" onkeyup="Search()" class="form-control" placeholder="Search Class" aria-label="Search Position" aria-describedby="search-addon" />
 			<span  class="btn btn-primary" id="advanced-search-button" type="button">
 				<i class="fa fa-search"></i>
 			</span>            
-		</div><br>-->
+		</div>
+    </div>-->
+    <div class="mb-3 p-3 card filter card-filter sticky-left">
         <h5>Filter by <i class="bi bi-funnel"></i></h5>
         <label>Major:</label>
             <div class="checkbox form-check">
@@ -73,7 +74,7 @@
             </div>
     </div>
    
-    <div class="open-position-container" id="open-position-container">
+    <div class="open-position-container backgroundelement" id="open-position-container">
         <div class="card mb-3 target" id="card">
             <h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)<span class="float-end" id="applicants">0 Applicants</span></h5>
             <div class="card-body">
