--- a/src/admin.html
+++ b/src/admin.html
@@ -74,11 +74,11 @@
             </div>
     </div>
    
-    <div class="open-position-container backgroundelement" id="open-position-container">
+    <div class="open-position-container" id="open-position-container">
         <div class="card mb-3 target" id="card">
             <h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)<span class="float-end" id="applicants">0 Applicants</span></h5>
             <div class="card-body">
-                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span>
+                <label class="card-title mt-2 mb-3">Position: <span id="position">Grader</span></label>
                     
                     <a id="seebutton" href="" value="" class="open-position-btn btn btn-primary float-end">See Applicants</a><br>
                     <!--<a id="editbutton" href="" value="" class="open-position-btn btn btn-primary float-end">Edit Position</a><br>--> 
@@ -86,7 +86,9 @@
                         <a id="editbutton" href="" value=""class="input-group-btn btn btn-primary">Edit Notes</a>
                         <button id="closebutton" value="" class="input-group-btn btn btn-primary">Close Position</button>
                     </div>
-                    <label class="card-title">Notes:</label><span id="notes">None</span>				
+                    <label class="card-title float-start">Notes: </label><div class="notes-wrapper ">
+					<span id="notes">None</span>
+					</div>
                     <!--<button id="closebutton" value="" class="open-position-btn btn btn-primary float-end">Close Position</button>-->
                     <br>
                 </div>
