--- a/src/admin.html
+++ b/src/admin.html
@@ -31,7 +31,7 @@
         </h2>
     </div>
     <div class="text-center mb-3 sticky-center">
-        <a id="newbutton" href="createposition.html?new" value="" class="open-position-btn btn btn-primary">Add Position</a>
+        <a id="newbutton" href="createposition.html?new" target="_blank" value="" class="open-position-btn btn btn-primary">Add Position</a>
         <!--<a href="createposition.html" class="mt-5 btn btn-primary ">Add Position</a>-->
     </div>
     <!--<div class="sticky-right">
