edit course number patten

--- a/src/createposition.html
+++ b/src/createposition.html
@@ -64,7 +64,7 @@
                                 <div class="col">
                                     <div class="col">
                                         <label for="level">Level:</label>
-                                        <select id="level" class="dropdown dropdown-toggle form-control" required>
+                                        <select id="level" class="dropdown dropdown-toggle form-control" onchange="changePattern(this.value)" required>
                                           <ul class="dropdown-menu">
 										    <option selected disabled value=''>Choose Level...</option>
                                             <option value="BS">BS</option>
