--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,10 @@
  
                         <div class="error" id="loginerror"></div>
                         
+						<div class="text-center mt-3">
+                           <label for="keep"><input type="checkbox" id="keep"> Keep me logged in</label>
+                        </div>
+						
                         <div class="text-center mt-3">
                             <input type="submit" value="Login" class="btn btn-primary px-5 mb-5">
                         </div>
