--- a/src/studentform.html
+++ b/src/studentform.html
@@ -24,7 +24,7 @@
 <body>
   <div class="page-logo">
     <img src="assets/umkc-logo1.png" class="img-login img-fluid" width="400px">
-	<button type="button" onclick="logout()" class="btn btn-primary ">Logout</button>
+	<button type="button" id="logout" class="btn btn-primary ">Logout</button>
   </div>
 
   <div class="position-container">
