--- a/src/createposition.html
+++ b/src/createposition.html
@@ -10,6 +10,7 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="script/position/positionprocess.js"></script>
   <script src="script/position/positionsubmit.js"></script>
+  <script type="module" src="script/redirect.js"></script>
   <script type="module" src="script/position/positiondatabase.js"></script>
   <link rel="icon" href="assets/umkc-logo.png">
   <title>Create Position</title>
