--- a/src/studentform.html
+++ b/src/studentform.html
@@ -15,7 +15,7 @@
   <script src="script/studentform/formiteration.js"></script>
   <script src="script/studentform/formwrite.js"></script>
   <script src="script/studentform/formsubmit.js"></script>
-  <script type="module" src="script/student.js"></script>
+  <script type="module" src="script/redirect.js"></script>
   <script type="module" src="script/studentform/formdatabase.js"></script>
   <link rel="icon" href="assets/umkc-logo.png">
   <title>Application</title>
