--- a/src/admin.html
+++ b/src/admin.html
@@ -10,6 +10,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="script/admin/adminfilter.js"></script>
   <script src="script/admin/adminwrite.js"></script>
+  <script type="module" src="script/redirect.js"></script>
   <script type="module" src="script/admin/admindatabase.js"></script>
   <link rel="icon" href="assets/umkc-logo.png">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
