--- a/src/applicants.html
+++ b/src/applicants.html
@@ -41,6 +41,7 @@
 <body>
         <div class="page-logo">
             <img src="assets/umkc-logo1.png" class="img-login img-fluid" width="400px">
+			<button type="button" id="logout" class="btn btn-primary ">Logout</button>
         </div>
     
         <div class="container applicants my-5" style="width:70%";>
