--- a/src/applicants.html
+++ b/src/applicants.html
@@ -10,7 +10,7 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="script/applicants/applicantswrite.js"></script>
   <script src="script/applicants/applicantsfilter.js"></script>
-  <script type="module" src="script/redirect.js"></script>
+  <!--<script type="module" src="script/redirect.js"></script>-->
   <script type="module" src="script/applicants/applicantsdatabase.js"></script>
   <link rel="icon" href="assets/umkc-logo.png">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
