Revert "roll back to before login"
This reverts commit 422dce67ff7fcae7a5a03a4bfa54c264fb92c399.

--- a/src/studentform.html
+++ b/src/studentform.html
@@ -15,6 +15,7 @@
   <script src="script/studentform/formiteration.js"></script>
   <script src="script/studentform/formwrite.js"></script>
   <script src="script/studentform/formsubmit.js"></script>
+  <!--<script type="module" src="script/redirect.js"></script>-->
   <script type="module" src="script/studentform/formdatabase.js"></script>
   <link rel="icon" href="assets/umkc-logo.png">
   <title>Application</title>
@@ -23,6 +24,7 @@
 <body>
   <div class="page-logo">
     <img src="assets/umkc-logo1.png" class="img-login img-fluid" width="400px">
+	<button type="button" id="logout" class="btn btn-primary ">Logout</button>
   </div>
 
   <div class="position-container">
