--- a/src/applicants.html
+++ b/src/applicants.html
@@ -46,15 +46,15 @@
             <h2> Applicants for <span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h2>
 	<div class="" id="filter">	
 	<div id="major">
-        <input type="checkbox" name="maj" value="CS">CS
-        <input type="checkbox" name="maj" value="IT">IT
-        <input type="checkbox" name="maj" value="ECE">ECE
-		<!--<input type="checkbox" name="maj" value="EE">EE-->
+        <label><input type="checkbox" name="maj" value="CS">CS</label>
+        <label><input type="checkbox" name="maj" value="IT">IT</label>
+        <label><input type="checkbox" name="maj" value="ECE">ECE</label>
+		<label><input type="checkbox" name="maj" value="EE">EE</label>
 	</div>
 	<div id="level">
-		<input type="checkbox" name="lev" value="BS">BS
-		<input type="checkbox" name="lev" value="MS">MS
-		<input type="checkbox" name="lev" value="PhD">PhD
+		<label><input type="checkbox" name="lev" value="BS">BS</label>
+		<label><input type="checkbox" name="lev" value="MS">MS</label>
+		<label><input type="checkbox" name="lev" value="PhD">PhD</label>
 	</div>
 	</div>
         <table class="table table-striped table-bordered" id="sortTable">
