--- a/src/studentform.html
+++ b/src/studentform.html
@@ -151,8 +151,8 @@
                           <input class="form-check-input gtainput" type="radio" required id="no" name="GTA" value="1" onclick="updateGTA(this.value)">
                           <label class="form-check-label me-4" for="no">No</label>
 
-                          <input type="radio" required id="3" value="null" name="GTA" hidden>
-						  <input type="radio" required id="2" value="onrecord"  name="GTA" hidden>
+                          <input type="radio" required id="null" value="3" name="GTA" hidden>
+						  <input type="radio" required id="onrecord" value="2"  name="GTA" hidden>
                           <div class="invalid-feedback">
                             Please select an Option.
                           </div>
