--- a/src/studentform.html
+++ b/src/studentform.html
@@ -153,6 +153,7 @@
 
                           <input type="radio" required id="null" value="3" name="GTA" hidden>
 						  <input type="radio" required id="onrecord" value="2"  name="GTA" hidden>
+						  <input type="radio" required id="pending" value="4"  name="GTA" hidden>
                           <div class="invalid-feedback">
                             Please select an Option.
                           </div>
