--- a/src/studentform.html
+++ b/src/studentform.html
@@ -198,7 +198,7 @@
 							<div class="dropdown-menu">
 								<button type="button" onclick="changeUpload(this.value)" value="resumef" class="dropdown-item">Resume</button>
 								<button type="button" onclick="changeUpload(this.value)" value="transcriptf" class="dropdown-item filedropdown">Transcript</button>
-								<button hidden type="button" onclick="changeUpload(this.value)" value="gtaf" class="dropdown-item filedropdown gtafile">GTA certification</button>
+								<button hidden type="button" onclick="changeUpload(this.value)" value="gtaf" class="dropdown-item filedropdown gtafilebtn">GTA certification</button>
 							</div>
 						</div>
 						<div class="invalid-feedback">
