media query for phone screen

--- a/src/studentform.html
+++ b/src/studentform.html
@@ -197,9 +197,9 @@
                 <input hidden class="form-control transcriptfile" type="file" id="tf">
                 <input hidden class="form-control gtafile" type="file" id="gf">
 
-                <label class="input-group-text resumefile file-label" for="rf">Resume Upload</label>
-                <label hidden class="input-group-text transcriptfile file-label" for="tf">Transcript Upload</label>
-                <label hidden class="input-group-text gtafile file-label" for="gf">GTA Upload</label>
+                <label class="input-group-text resumefile file-label label-size" for="rf">Resume</label>
+                <label hidden class="input-group-text transcriptfile file-label label-size" for="tf">Transcript</label>
+                <label hidden class="input-group-text gtafile file-label label-size" for="gf">GTA</label>
                 <div class="input-group-prepend">
                   <button type="button"
                     class="btn btn-primary dropdown-toggle dropdown-toggle-split file-dropdown-toggle"
