--- a/src/welcome.html
+++ b/src/welcome.html
@@ -37,7 +37,7 @@
         </h2>
     </div>
 
-    <div class=" mb-3 p-3 card filter card-filter">
+    <div class="mb-3 p-3 card filter card-filter sticky-left">
         <h5>Filter by <i class="bi bi-funnel"></i></h5>
         <label>Major:</label>
         <div class="checkbox form-check">
