make createposition/apply button sticky right

--- a/src/welcome.html
+++ b/src/welcome.html
@@ -77,8 +77,8 @@
         </div>
     </div>
 
-    <div class="text-center mb-3">
-        <a id="newbutton" href="index.html" value="" class="open-position-btn btn btn-primary">Apply</a>
+    <div class="text-center mb-3 sticky-right">
+        <a href = "index.html" id="newbutton" href="index.html" value="" class="open-position-btn2 btn btn-primary">Apply</a>
         <!--<a href="createposition.html" class="mt-5 btn btn-primary ">Add Position</a>-->
     </div>
 
