--- a/src/admin.html
+++ b/src/admin.html
@@ -30,8 +30,8 @@
             </div>
         </h2>
     </div>
-    <div class="text-center mb-3 sticky-center">
-        <a id="newbutton" href="createposition.html?new" target="_blank" value="" class="open-position-btn btn btn-primary">Add Position</a>
+    <div class="text-center mb-3 sticky-right">
+        <a id="newbutton" href="createposition.html?new" target="_blank" value="" class="open-position-btn2 btn btn-primary">Add Position</a>
         <!--<a href="createposition.html" class="mt-5 btn btn-primary ">Add Position</a>-->
     </div>
     <!--<div class="sticky-right">
@@ -94,7 +94,7 @@
                 </div>
             </div>
     </div>
-    
+
  <!--Script added for bootstrap-->
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
