add overflow to welcome page

--- a/src/admin.html
+++ b/src/admin.html
@@ -86,10 +86,10 @@
                         <a id="editbutton" href="" value=""class="input-group-btn btn btn-primary">Edit Notes</a>
                         <button id="closebutton" value="" class="input-group-btn btn btn-primary">Close Position</button>
                     </div>
-                    <label class="card-title float-start">Notes: </label><div class="notes-wrapper ">
-					<span id="notes">None</span>
+                    <label class="card-title float-start">Notes: </label>
+					<div class="notes-wrapper ">
+						<span id="notes">None</span>
 					</div>
-                    <!--<button id="closebutton" value="" class="open-position-btn btn btn-primary float-end">Close Position</button>-->
                     <br>
                 </div>
             </div>
