--- a/src/welcome.html
+++ b/src/welcome.html
@@ -70,8 +70,10 @@
             <h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5>
             <div class="card-body">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
-                <label class="card-title">Notes:</label><span id="notes">None</span>
-                <!--<button id="closebutton" value="" class="open-position-btn btn btn-primary float-end">Close Position</button>-->
+                <label class="card-title float-start">Notes: </label>
+				<div class="notes-wrapper ">
+					<span id="notes">None</span>
+				</div>
                 <br>
             </div>
         </div>
