--- a/src/welcome.html
+++ b/src/welcome.html
@@ -36,7 +36,10 @@
             <br>
         </h2>
     </div>
-
+    <div class="text-center mb-3 sticky-right">
+        <a href="index.html" id="newbutton" value="" class="open-position-btn2 btn btn-primary">Apply</a>
+        <!--<a href="createposition.html" class="mt-5 btn btn-primary ">Add Position</a>-->
+    </div>
     <div class="mb-3 p-3 card filter card-filter sticky-left">
         <h5>Filter by <i class="bi bi-funnel"></i></h5>
         <label>Major:</label>
@@ -79,10 +82,7 @@
         </div>
     </div>
 
-    <div class="text-center mb-3 sticky-right">
-        <a href = "index.html" id="newbutton" href="index.html" value="" class="open-position-btn2 btn btn-primary">Apply</a>
-        <!--<a href="createposition.html" class="mt-5 btn btn-primary ">Add Position</a>-->
-    </div>
+
 
     <!--Script added for bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
