--- a/src/welcome.html
+++ b/src/welcome.html
@@ -62,8 +62,8 @@
         </div>
         <label class="mt-2">Level:</label>
         <div class="form-check">
-            <label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox" id="grad" value="grad" onchange="changeCheckbox(this)"/>Graduate</label><br>
-            <label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox" id="undergrad" value="undergrad" onchange="changeCheckbox(this)"/>Undergraduate </label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input level" type="radio" id="grad" value="grad"/>Graduate</label><br>
+            <label class="checkbox form-check-label" ><input class="form-check-input level" type="radio" id="undergrad" value="undergrad" checked/>Undergraduate </label><br>
         </div>
 
     </div>
