--- a/src/welcome.html
+++ b/src/welcome.html
@@ -58,12 +58,12 @@
         <div class="form-check">
             <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox" id="Fall" value="Fall" onchange="changeCheckbox(this)"/>Fall</label><br>
             <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox" id="Spring" value="Spring" onchange="changeCheckbox(this)"/>Spring</label><br>
-            <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox" id="Summer" value="Summer" onchange="changeCheckbox(this)"/>Summer</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox" id="Summer" value="Summer" onchange="filter()"/>Summer</label><br>
         </div>
         <label class="mt-2">Level:</label>
         <div class="form-check">
-            <label class="checkbox form-check-label"><input class="form-check-input level" type="radio" name="gradrad" id="grad" value="grad"/>Graduate</label><br>
-            <label class="checkbox form-check-label" ><input class="form-check-input level" type="radio" name="gradrad" id="undergrad" value="undergrad" checked/>Undergraduate </label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input level" type="radio" name="gradrad" id="grad" value="grad" onchange="changeCheckbox(this)"/>Graduate</label><br>
+            <label class="checkbox form-check-label" ><input class="form-check-input level" type="radio" name="gradrad" id="undergrad" value="undergrad" onchange="filter()" checked/>Undergraduate </label><br>
         </div>
 
     </div>
