--- a/src/welcome.html
+++ b/src/welcome.html
@@ -61,10 +61,14 @@
             <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox" id="Summer" value="Summer" onchange="changeCheckbox(this)"/>Summer</label><br>
         </div>
         <label class="mt-2">Level:</label>
-        <div class="form-check">
+        <!--<div class="form-check">
             <label class="checkbox form-check-label"><input class="form-check-input level" type="radio" name="gradrad" id="grad" value="grad" onchange="filter()"/>Graduate</label><br>
             <label class="checkbox form-check-label" ><input class="form-check-input level" type="radio" name="gradrad" id="undergrad" value="undergrad" onchange="filter()" checked/>Undergraduate </label><br>
-        </div>
+        </div>-->
+		<div class="form-check">
+			<label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox" id="grad" value="grad" onchange="changeCheckbox(this)"/>Graduate</label><br>
+			<label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox" id="undergrad" value="undergrad" onchange="changeCheckbox(this)"/>Undergraduate </label><br>
+		</div>
 
     </div>
 
