open pages in new tab

--- a/src/welcome.html
+++ b/src/welcome.html
@@ -37,7 +37,7 @@
         </h2>
     </div>
     <div class="text-center mb-3 sticky-right">
-        <a href="index.html" id="newbutton" value="" class="open-position-btn2 btn btn-primary">Apply</a>
+        <a href="index.html" target="_blank" id="newbutton" value="" class="open-position-btn2 btn btn-primary">Apply</a>
         <!--<a href="createposition.html" class="mt-5 btn btn-primary ">Add Position</a>-->
     </div>
     <div class="mb-3 p-3 card filter card-filter sticky-left">
