--- a/src/studentform.html
+++ b/src/studentform.html
@@ -178,7 +178,7 @@
                   <div id="lablistna" class="control-group" hidden>
                     <label class='form-label' for='lab'>Lab Classes</label>
                     <p class="error">You must be GTA certified to work as a lab instructor. <a
-                        href="https://catalog.umkc.edu/general-graduate-academic-regulations-information/international-graduate-student-academic-regulations/">Click
+                        href="https://catalog.umkc.edu/general-graduate-academic-regulations-information/international-graduate-student-academic-regulations/" target="_blank">Click
                         here</a> to learn more about GTA certification process.</p>
                   </div>
 
