--- a/src/studentform.html
+++ b/src/studentform.html
@@ -156,6 +156,10 @@
                   <input class="form-check-input gtainput" type="radio" required id="no" name="GTA" value="1"
                     onclick="updateGTA(this.value)">
                   <label class="form-check-label me-4" for="no">No</label>
+				  
+				  <input class="form-check-input gtainput" type="radio" required id="nolab" name="GTA" value="3"
+                    onclick="updateGTA(this.value)">
+                  <label class="form-check-label me-4" for="nolab">Not interested in being an Instructor</label>
 
                   <input type="radio" required id="null" value="3" name="GTA" hidden>
                   <input type="radio" required id="onrecord" value="2" name="GTA" hidden>
