--- a/src/admin.html
+++ b/src/admin.html
@@ -1,101 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--Link added for bootstrap-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="style/css.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script src="script/admin/adminfilter.js"></script>
-  <script src="script/admin/adminwrite.js"></script>
-  <script type="module" src="script/admin/admindatabase.js"></script>
-  <link rel="icon" href="assets/umkc-logo.png">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>Dashboard</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Link added for bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style/css.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="script/admin/adminfilter.js"></script>
+    <script src="script/admin/adminwrite.js"></script>
+    <script type="module" src="script/admin/admindatabase.js"></script>
+    <link rel="icon" href="assets/umkc-logo.png">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Dashboard</title>
 </head>
+
 <body>
     <div class="page-logo">
         <img src="assets/umkc-logo1.png" class="img-login img-fluid" width="400px">
+        <h2 class="m-5 mt-2 mb-3">Open Positions:</h2>
     </div>
 
-    <div>
-        <h2 class="m-5 mt-2 mb-3">Open Positions:
-            <div class="input-group float-end">
-                <input type="text" id="Search" onkeyup="Search()" class="form-control" placeholder="Search Class" aria-label="Search Position" aria-describedby="search-addon" />
-                <span  class="btn btn-primary" id="advanced-search-button" type="button">
-                    <i class="fa fa-search"></i>
-                  </span>            
-            </div>
-        </h2>
+    <div class="text-center sticky-right">
+        <div class="input-group me-5 mb-3 float-end sticky-right">
+            <input type="text" id="Search" onkeyup="Search()" class="form-control" placeholder="Search Class"
+                aria-label="Search Position" aria-describedby="search-addon" />
+            <span class="btn btn-primary" id="advanced-search-button" type="button">
+                <i class="fa fa-search"></i>
+            </span>
+        </div>
+        <div>
+            <a id="newbutton" href="createposition.html?new" target="_blank" value=""
+                class="open-position-btn2 btn btn-primary float-end">Add Position</a>
+        </div>
     </div>
-    <div class="text-center mb-3 sticky-right">
-        <a id="newbutton" href="createposition.html?new" target="_blank" value="" class="open-position-btn2 btn btn-primary">Add Position</a>
-        <!--<a href="createposition.html" class="mt-5 btn btn-primary ">Add Position</a>-->
-    </div>
-    <!--<div class="sticky-right">
-		<div class="input-group">
-			<input type="text" id="Search" onkeyup="Search()" class="form-control" placeholder="Search Class" aria-label="Search Position" aria-describedby="search-addon" />
-			<span  class="btn btn-primary" id="advanced-search-button" type="button">
-				<i class="fa fa-search"></i>
-			</span>            
-		</div>
-    </div>-->
+
     <div class="mb-3 p-3 card filter card-filter sticky-left">
         <h5>Filter by <i class="bi bi-funnel"></i></h5>
         <label>Major:</label>
-            <div class="form-check" id="test">
-                <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="CS" value="CS" onchange="changeCheckbox(this)"/>CS</label><br>
-                <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="IT" value="IT" onchange="changeCheckbox(this)"/>IT</label><br>
-                <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="ECE" value="ECE" onchange="changeCheckbox(this)"/>ECE</label><br>
-                <!--<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="EE" onchange="filter()"/>EE</label><br>-->
-            </div>
-            <label class="mt-2">Position:</label>
-            <div class="form-check">
-                <label class="checkbox form-check-label"><input class="form-check-input position" type="checkbox" id="Grader" value="Grader" onchange="changeCheckbox(this)"/>Grader</label><br>
-                <label class="checkbox form-check-label"><input class="form-check-input position" type="checkbox" id="Instructor" value="Instructor" onchange="changeCheckbox(this)"/>Instructor</label><br>
-            </div>
-
-            <label class="mt-2">Semester:</label>
-            <div class="form-check">
-                <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox" id="Fall" value="Fall" onchange="changeCheckbox(this)"/>Fall</label><br>
-                <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox" id="Spring" value="Spring" onchange="changeCheckbox(this)"/>Spring</label><br>
-                <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox" id="Summer" value="Summer" onchange="changeCheckbox(this)"/>Summer</label><br>
-            </div>
-            <label class="mt-2">Level:</label>
-            <div class="form-check">
-                <label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox" id="grad" value="grad" onchange="changeCheckbox(this)"/>Graduate</label><br>
-                <label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox" id="undergrad" value="undergrad" onchange="changeCheckbox(this)"/>Undergraduate </label><br>
-            </div>
-            <div class="mt-3 form-check">
-                <label class="checkbox form-check-label"><input class="form-check-input hasapplicants" type="checkbox" id="applicants" value="applicants" onchange="changeCheckbox(this)" checked/>Applicants</label><br>
-                <label class="checkbox form-check-label"><input class="form-check-input hasapplicants" type="checkbox" id="noapplicants" value="noapplicants" onchange="changeCheckbox(this)"/>No Applicants </label><br>
-            </div>
+        <div class="form-check" id="test">
+            <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="CS"
+                    value="CS" onchange="changeCheckbox(this)" />CS</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="IT"
+                    value="IT" onchange="changeCheckbox(this)" />IT</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="ECE"
+                    value="ECE" onchange="changeCheckbox(this)" />ECE</label><br>
+            <!--<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" value="EE" onchange="filter()"/>EE</label><br>-->
+        </div>
+        <label class="mt-2">Position:</label>
+        <div class="form-check">
+            <label class="checkbox form-check-label"><input class="form-check-input position" type="checkbox"
+                    id="Grader" value="Grader" onchange="changeCheckbox(this)" />Grader</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input position" type="checkbox"
+                    id="Instructor" value="Instructor" onchange="changeCheckbox(this)" />Instructor</label><br>
+        </div>
+        <label class="mt-2">Semester:</label>
+        <div class="form-check">
+            <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox" id="Fall"
+                    value="Fall" onchange="changeCheckbox(this)" />Fall</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox"
+                    id="Spring" value="Spring" onchange="changeCheckbox(this)" />Spring</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox"
+                    id="Summer" value="Summer" onchange="changeCheckbox(this)" />Summer</label><br>
+        </div>
+        <label class="mt-2">Level:</label>
+        <div class="form-check">
+            <label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox" id="grad"
+                    value="grad" onchange="changeCheckbox(this)" />Graduate</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox"
+                    id="undergrad" value="undergrad" onchange="changeCheckbox(this)" />Undergraduate </label><br>
+        </div>
+        <div class="mt-3 form-check">
+            <label class="checkbox form-check-label"><input class="form-check-input hasapplicants" type="checkbox"
+                    id="applicants" value="applicants" onchange="changeCheckbox(this)" checked />Applicants</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input hasapplicants" type="checkbox"
+                    id="noapplicants" value="noapplicants" onchange="changeCheckbox(this)" />No Applicants </label><br>
+        </div>
     </div>
-   
+
     <div class="open-position-container" id="open-position-container">
         <div class="card mb-3 target" id="card">
-            <h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)<span class="float-end" id="applicants">0 Applicants</span></h5>
+            <h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)<span
+                    class="float-end" id="applicants">0 Applicants</span></h5>
             <div class="card-body">
                 <label class="card-title mt-2 mb-3">Position: <span id="position">Grader</span></label>
-                    
-                    <a id="seebutton" href="" value="" class="open-position-btn btn btn-primary float-end">See Applicants</a><br>
-                    <!--<a id="editbutton" href="" value="" class="open-position-btn btn btn-primary float-end">Edit Position</a><br>--> 
-                    <div class = "open-position-input-group btn-primary input-group float-end">
-                        <a id="editbutton" href="" value=""class="input-group-btn btn btn-primary">Edit Notes</a>
-                        <button id="closebutton" value="" class="input-group-btn btn btn-primary">Close Position</button>
-                    </div>
-                    <label class="card-title float-start">Notes: </label>
-					<div class="notes-wrapper ">
-						<span id="notes">None</span>
-					</div>
-                    <br>
+                <a id="seebutton" href="" value="" class="open-position-btn btn btn-primary float-end">See Applicants</a><br>
+                <div class="open-position-input-group btn-primary input-group float-end">
+                    <a id="editbutton" href="" value="" class="input-group-btn btn btn-primary">Edit Notes</a>
+                    <button id="closebutton" value="" class="input-group-btn btn btn-primary">Close Position</button>
                 </div>
+                <label class="card-title float-start">Notes: </label>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
+                <br>
             </div>
+        </div>
     </div>
 
- <!--Script added for bootstrap-->
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!--Script added for bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous">
+    </script>
 </body>
 </html>
