--- a/src/welcome.html
+++ b/src/welcome.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,54 +21,57 @@
 <body>
     <div class="page-logo">
         <img src="assets/umkc-logo1.png" class="img-login img-fluid" width="400px">
+        <h2 class="m-5 mt-2 mb-3">Open Positions that you can apply for:</h2>
     </div>
 
-    <div>
-        <h2 class="m-5 mt-2 mb-3">Open Positions that you can apply for:
-            <div class="input-group float-end">
-                <input type="text" id="Search" onkeyup="Search()" class="form-control rounded"
-                    placeholder="Search Class" aria-label="Search Position" aria-describedby="search-addon" />
-                <span class="btn btn-primary" id="advanced-search-button" type="button">
-                    <i class="fa fa-search"></i>
-                </span>
-            </div>
-            <br>
-        </h2>
+    <div class="text-center sticky-right">
+        <div class="input-group me-5 mb-3 float-end sticky-right">
+            <input type="text" id="Search" onkeyup="Search()" class="form-control" placeholder="Search Class"
+                aria-label="Search Position" aria-describedby="search-addon" />
+            <span class="btn btn-primary float-end" id="advanced-search-button" type="button">
+                <i class="fa fa-search"></i>
+            </span>
+        </div>
+        <div>
+            <a href="index.html" target="_blank" id="newbutton" value=""
+                class="open-position-btn2 btn btn-primary float-end">Apply</a>
+        </div>
     </div>
-    <div class="text-center mb-3 sticky-right">
-        <a href="index.html" target="_blank" id="newbutton" value="" class="open-position-btn2 btn btn-primary">Apply</a>
-        <!--<a href="createposition.html" class="mt-5 btn btn-primary ">Add Position</a>-->
-    </div>
+
     <div class="mb-3 p-3 card filter card-filter sticky-left">
         <h5>Filter by <i class="bi bi-funnel"></i></h5>
         <label>Major:</label>
         <div class="form-check" id="test">
-            <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="CS" value="CS" onchange="changeCheckbox(this)"/>CS</label><br>
-            <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="IT" value="IT" onchange="changeCheckbox(this)"/>IT</label><br>
-            <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="ECE" value="ECE" onchange="changeCheckbox(this)"/>ECE</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="CS"
+                    value="CS" onchange="changeCheckbox(this)" />CS</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="IT"
+                    value="IT" onchange="changeCheckbox(this)" />IT</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="ECE"
+                    value="ECE" onchange="changeCheckbox(this)" />ECE</label><br>
         </div>
         <label class="mt-2">Position:</label>
         <div class="form-check">
-            <label class="checkbox form-check-label"><input class="form-check-input position" type="checkbox" id="Grader" value="Grader" onchange="changeCheckbox(this)"/>Grader</label><br>
-            <label class="checkbox form-check-label"><input class="form-check-input position" type="checkbox" id="Instructor" value="Instructor" onchange="changeCheckbox(this)"/>Instructor</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input position" type="checkbox"
+                    id="Grader" value="Grader" onchange="changeCheckbox(this)" />Grader</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input position" type="checkbox"
+                    id="Instructor" value="Instructor" onchange="changeCheckbox(this)" />Instructor</label><br>
         </div>
-
         <label class="mt-2">Semester:</label>
         <div class="form-check">
-            <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox" id="Fall" value="Fall" onchange="changeCheckbox(this)"/>Fall</label><br>
-            <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox" id="Spring" value="Spring" onchange="changeCheckbox(this)"/>Spring</label><br>
-            <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox" id="Summer" value="Summer" onchange="changeCheckbox(this)"/>Summer</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox" id="Fall"
+                    value="Fall" onchange="changeCheckbox(this)" />Fall</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox"
+                    id="Spring" value="Spring" onchange="changeCheckbox(this)" />Spring</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input semester" type="checkbox"
+                    id="Summer" value="Summer" onchange="changeCheckbox(this)" />Summer</label><br>
         </div>
         <label class="mt-2">Level:</label>
-        <!--<div class="form-check">
-            <label class="checkbox form-check-label"><input class="form-check-input level" type="radio" name="gradrad" id="grad" value="grad" onchange="filter()"/>Graduate</label><br>
-            <label class="checkbox form-check-label" ><input class="form-check-input level" type="radio" name="gradrad" id="undergrad" value="undergrad" onchange="filter()" checked/>Undergraduate </label><br>
-        </div>-->
-		<div class="form-check">
-			<label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox" id="grad" value="grad" onchange="changeCheckbox(this)"/>Graduate</label><br>
-			<label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox" id="undergrad" value="undergrad" onchange="changeCheckbox(this)"/>Undergraduate </label><br>
-		</div>
-
+        <div class="form-check">
+            <label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox" id="grad"
+                    value="grad" onchange="changeCheckbox(this)" />Graduate</label><br>
+            <label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox"
+                    id="undergrad" value="undergrad" onchange="changeCheckbox(this)" />Undergraduate </label><br>
+        </div>
     </div>
 
     <div class="open-position-container" id="open-position-container">
@@ -78,20 +80,18 @@
             <div class="card-body">
                 <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
                 <label class="card-title float-start">Notes: </label>
-				<div class="notes-wrapper ">
-					<span id="notes">None</span>
-				</div>
+                <div class="notes-wrapper ">
+                    <span id="notes">None</span>
+                </div>
                 <br>
             </div>
         </div>
     </div>
 
-
-
     <!--Script added for bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
 </body>
-
 </html>
